force-app/main/default/objects/User_Login__c/User_Login__c.object-meta.xml
<CustomObject>
    <description
  >An object for storing passwords and login for Account Users.</description>
    <label>User Login</label>
    <nameField>
        <label>User Login Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>