force-app/main/default/objects/User_Login__c/fields/Custom_Auth__c.field-meta.xml
<CustomField>
    <fullName>Custom_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Custom Auth object containing token and expiration date.</description>
    <label>Custom Auth</label>
    <referenceTo>Custom_Auth__c</referenceTo>
    <relationshipLabel>User Logins</relationshipLabel>
    <relationshipName>User_Logins</relationshipName>
    <type>Lookup</type>
</CustomField>