force-app/main/default/objects/User_Login__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email for a User.</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>