force-app/main/default/objects/User_Login__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for a User.</description>
    <label>Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>